--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,65 @@
-.App {
+.App{
   text-align: center;
+  width: 415px;
+  height: 615px;
+  background-color:antiquewhite;
+  margin-left: 35%;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  margin-top: 10px;
+  font-weight: bold;
+  padding-top: 50px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input{
+  margin: 10px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  /* border: 1px solid blue; */
+  font-size: 20px;
+  font-weight: bold;
+  /* border-radius: 5px; */
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+input:focus{
+  outline-color: blue;
 }
 
-.App-link {
-  color: #61dafb;
+button{
+  width: 100px;
+  padding: 10px;
+  margin-top: 10px;
+  background-color: blue;
+  color:aliceblue;
+  font-size: 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button:hover{
+  border: 1px solid blue;
+}
+
+.error{
+  border: 1px solid red;
+ 
+}
+
+
+h3{
+  padding-top: 40px;
+}
+.para{
+  margin-top: 20px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-style: oblique;
+  font-display:initial;
+  font-size: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+  text-align: center;
 }
